--- a/MasterManager-war/web/institution/institution_index.xhtml
+++ b/MasterManager-war/web/institution/institution_index.xhtml
@@ -54,7 +54,7 @@
                     id="searchProjectProposals"
                     size="20"
                     required="true"
-                    requiredMessage="Erro: campo não pode estar vazio!"
+                    requiredMessage="Erro: Campo não pode estar vazio!"
                     value="#{proponentManager.searchableProjectProposal}"/>
 
                 <br></br>
