--- a/MasterManager-war/web/student/student_application_details.xhtml
+++ b/MasterManager-war/web/student/student_application_details.xhtml
@@ -30,7 +30,7 @@
                         id="projectProposalCode"
                         value="#{studentManager.currentApplication.projectProposal.code}"/>
 
-                    <h:outputLabel for="projectProposalTitle" value="Title da proposta: " />
+                    <h:outputLabel for="projectProposalTitle" value="Título da proposta: " />
                     <h:outputText 
                         id="title"
                         value="#{studentManager.currentApplication.projectProposal.title}"/>
@@ -40,23 +40,23 @@
                         id="projectProposalAbstract"
                         value="#{studentManager.currentApplication.projectProposal.projectAbstract}"/>
 
-                    <h:outputLabel for="projectProposalWorkPlan" value="WorkPlan: " />
+                    <h:outputLabel for="projectProposalWorkPlan" value="Plano de Trabalho: " />
                     <h:outputText 
                         id="workPlan"
                         value="#{studentManager.currentApplication.projectProposal.workPlan}"/>
 
-                    <h:outputLabel for="projectProposalWorkPlace" value="WorkPlace: " />
+                    <h:outputLabel for="projectProposalWorkPlace" value="Local de Trabalho: " />
                     <h:outputText 
                         id="workPlace"
                         value="#{studentManager.currentApplication.projectProposal.workPlace}"/>
 
 
-                    <h:outputLabel for="projectProposalBudget" value="Budget: " />
+                    <h:outputLabel for="projectProposalBudget" value="Orçamento: " />
                     <h:outputText 
                         id="budget"
                         value="#{studentManager.currentApplication.projectProposal.budget}"/>
 
-                    <h:outputLabel for="projectProposalProponent" value="ProponentUsername " />
+                    <h:outputLabel for="projectProposalProponent" value="Username do Proponente: " />
                     <h:outputText 
                         id="proponent"
                         value="#{studentManager.currentApplication.projectProposal.proponent.name}"/>
@@ -66,9 +66,7 @@
                         id="applyingMessage"
                         value="#{studentManager.currentApplication.applyingMessage}"/>
 
-                    <!--MOSTRAR O NOME DO FICHEIRO QUE FOI FEITO UPLOAD-->
-                    <!--MOSTRAR O ESTADO DA CANDIDATURA-->
-
+               
                 </h:panelGrid>
 
                 <br/>
