--- a/MasterManager-war/web/student/student_index.xhtml
+++ b/MasterManager-war/web/student/student_index.xhtml
@@ -25,12 +25,12 @@
             <br></br>
             
             <h:form>
-                <h:outputLabel for="searchApplications" value="Procurar candidatura " />
+                <h:outputLabel for="searchApplications" value="Procurar candidatura: " />
                 <h:inputText 
                     id="searchApplications"
                     size="20"
                     required="true"
-                    requiredMessage="Erro: campo não pode estar vazio!"
+                    requiredMessage="Erro: Campo não pode estar vazio!"
                     value="#{studentManager.searchableApplication}"/>
 
                 <br></br>
