--- a/MasterManager-war/web/admin/admin_index.xhtml
+++ b/MasterManager-war/web/admin/admin_index.xhtml
@@ -65,7 +65,7 @@
             <br/>
 
             <h:form>
-                <h:outputLabel for="search" value="Procurar professor " />
+                <h:outputLabel for="search" value="Procurar professor: " />
                 <h:inputText 
                     id="searchTeachers"
                     size="20"
@@ -179,7 +179,7 @@
 
             <em:dt 
                 title="Provas Públicas" 
-                headers="#{['Código', 'Titulo', 'Dia da Prova', 'Local', 'Estudante',
+                headers="#{['Código', 'Título', 'Dia da Prova', 'Local', 'Estudante',
                            'Presidente do Jury', 'Orientador', 'Professore de Fora']}"
                 props="#{['code', 'title', 'testDateString', 'place', 'studentName',
                          'juryPresidentName', 'advisorName', 'outsideTeacherName']}"
