--- a/MasterManager-war/web/admin/institution_create.xhtml
+++ b/MasterManager-war/web/admin/institution_create.xhtml
@@ -4,7 +4,7 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:f="http://java.sun.com/jsf/core">
     <h:head>
-        <title>CCP</title>
+        <title>Criar Instituição</title>
     </h:head>
     <h:body>
         <h:form>                  
@@ -15,7 +15,7 @@
                     id="username"
                     size="20"
                     required="true"
-                    requiredMessage="Error: Username cannot be empty."
+                    requiredMessage="Erro: O Username não pode estar vazio."
                     value="#{administratorManager.newInstitution.username}">
                     <f:validator validatorId="usernameValidator"/>
                 </h:inputText>
@@ -26,16 +26,16 @@
                     id="password"
                     size="20"
                     required="true"
-                    requiredMessage="Error: Password cannot be empty."
+                    requiredMessage="Erro: A Password não pode estar vazia."
                     value="#{administratorManager.newInstitution.password}"/>
                 <h:message for="password" errorStyle="color: red" />                        
 
-                <h:outputLabel for="name" value="Name: " />
+                <h:outputLabel for="name" value="Nome: " />
                 <h:inputText 
                     id="name"
                     size="52"
                     required="true"
-                    requiredMessage="Error: Name cannot be empty."                            
+                    requiredMessage="Erro: O Nome não pode estar vazio."                            
                     value="#{administratorManager.newInstitution.name}" />
                 <h:message for="name" errorStyle="color: red" />
 
@@ -44,13 +44,13 @@
                     id="email"
                     size="52"
                     required="true"
-                    requiredMessage="Error: Email cannot be empty."                            
+                    requiredMessage="Erro: O Email não pode estar vazio."                            
                     value="#{administratorManager.newInstitution.email}" >
                     <f:validateRegex pattern="[\w\.-]*[a-zA-Z0-9_]@[\w\.-]*[a-zA-Z0-9]\.[a-zA-Z][a-zA-Z\.]*[a-zA-Z]" />
                 </h:inputText>    
                 <h:message for="email" errorStyle="color: red" />
 
-                
+
                 <br></br>
 
 
@@ -58,7 +58,7 @@
 
                 <h:commandButton
                     id="submit"
-                    value="Create"
+                    value="Criar"
                     binding="#{administratorManager.component}" 
                     action="#{administratorManager.createInstitution}" />
                 <h:message for="submit" style="color: red"/>
