--- a/MasterManager-war/web/admin/searchTest.xhtml
+++ b/MasterManager-war/web/admin/searchTest.xhtml
@@ -7,30 +7,30 @@
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:em="http://xmlns.jcp.org/jsf/composite/emcomp">
     <ui:composition template="../templates/skeleton.xhtml">
-        <ui:define name="title">CCP</ui:define>
+        <ui:define name="title">Procurar Provas Públicas</ui:define>
         <ui:define name="main">
             <em:dt 
                 title="Public Tests" 
-                headers="#{['code', 'title', 'testDateTime', 'place', 'link','student',
+                headers="#{['Código', 'Título', 'Data e Hora', 'Local', 'Link','Estudante',
                            'juryPresident', 'advisor', 'outsideTeacherName', 
                            'outsideTeacherEmail']}"
-                props="#{['code', 'title', 'testDateString', 'place', 'link','studentName',
+                props="#{['Código', 'Título', 'Data e Hora', 'Local', 'Link','Estudante',
                          'juryPresidentName', 'advisorName', 'outsideTeacherName', 
                          'outsideTeacherEmail']}"
                 list="#{administratorManager.searchPublicTest}">
-                <p:column headerText="Actions">
+                <p:column headerText="Acções">
                     <h:form>
-                        <h:commandLink value="Details" action="admin_publictest_details?facesredirect=true">
+                        <h:commandLink value="Detalhes" action="admin_publictest_details?facesredirect=true">
                             <f:setPropertyActionListener
                                 target="#{administratorManager.currentPublicTest}" value="#{object}" />
                         </h:commandLink>
                         &nbsp;
-                        <h:commandLink value="Update" action="admin_publictest_update?facesredirect=true">
+                        <h:commandLink value="Actualizar" action="admin_publictest_update?facesredirect=true">
                             <f:setPropertyActionListener
                                 target="#{administratorManager.currentPublicTest}" value="#{object}" />
                         </h:commandLink>
                         &nbsp;
-                        <h:commandLink value="Remove"
+                        <h:commandLink value="Remover"
                                        actionListener="#{administratorManager.removePublicTest}">
                             <f:param name="publicTestCode" id="publicTestCode"
                                      value="#{object.code}" />
