--- a/MasterManager-war/web/admin/search_institution.xhtml
+++ b/MasterManager-war/web/admin/search_institution.xhtml
@@ -7,7 +7,7 @@
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:em="http://xmlns.jcp.org/jsf/composite/emcomp">
     <ui:composition template="../templates/skeleton.xhtml">
-        <ui:define name="title">CCP</ui:define>
+        <ui:define name="title">Procurar Instituição</ui:define>
         <ui:define name="main">
             <em:dt 
                 title="Instituições encontradas" 
