--- a/MasterManager-war/web/admin/search_student.xhtml
+++ b/MasterManager-war/web/admin/search_student.xhtml
@@ -7,26 +7,26 @@
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:em="http://xmlns.jcp.org/jsf/composite/emcomp">
     <ui:composition template="../templates/skeleton.xhtml">
-        <ui:define name="title">CCP</ui:define>
+        <ui:define name="title">Procurar Estudante</ui:define>
         <ui:define name="main">
             <em:dt 
                 title="Estudantes encontrados" 
-               headers="#{['Username', 'Name', 'Email', 'Course']}"
+               headers="#{['Username', 'Nome', 'Email', 'Curso']}"
                 props="#{['username', 'name', 'email', 'courseName']}"
                 list="#{administratorManager.searchStudent}">
-                <p:column headerText="Actions">
+                <p:column headerText="Acções">
                     <h:form>
                         <h:commandLink value="Detalhes" action="admin_student_details?facesredirect=true">
                             <f:setPropertyActionListener
                                 target="#{administratorManager.currentStudent}" value="#{object}" />
                         </h:commandLink>
                         &nbsp;
-                        <h:commandLink value="Update" action="students_update?facesredirect=true">
+                        <h:commandLink value="Actualizar" action="students_update?facesredirect=true">
                             <f:setPropertyActionListener
                                 target="#{administratorManager.currentStudent}" value="#{object}" />
                         </h:commandLink>
                         &nbsp;
-                        <h:commandLink value="Remove"
+                        <h:commandLink value="Remover"
                                        actionListener="#{administratorManager.removeStudent}">
                             <f:param name="studentUsername" id="studentUsername"
                                      value="#{object.username}" />
