--- a/MasterManager-war/web/admin/students_create.xhtml
+++ b/MasterManager-war/web/admin/students_create.xhtml
@@ -4,7 +4,7 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:f="http://java.sun.com/jsf/core">
     <h:head>
-        <title>CCP</title>
+        <title>Criar Estudante</title>
     </h:head>
     <h:body>
         <h:form>                  
@@ -15,7 +15,7 @@
                     id="username"
                     size="20"
                     required="true"
-                    requiredMessage="Error: Username cannot be empty."
+                    requiredMessage="Erro: O Username não pode estar vazio."
                     value="#{administratorManager.newStudent.username}">
                     <f:validator validatorId="usernameValidator"/>
                 </h:inputText>
@@ -26,16 +26,16 @@
                     id="password"
                     size="20"
                     required="true"
-                    requiredMessage="Error: Password cannot be empty."
+                    requiredMessage="Erro: A Password não pode estar vazia."
                     value="#{administratorManager.newStudent.password}"/>
                 <h:message for="password" errorStyle="color: red" />                        
 
-                <h:outputLabel for="name" value="Name: " />
+                <h:outputLabel for="name" value="Nome: " />
                 <h:inputText 
                     id="name"
                     size="52"
                     required="true"
-                    requiredMessage="Error: Name cannot be empty."                            
+                    requiredMessage="Erro: O nome não pode estar vazio."                            
                     value="#{administratorManager.newStudent.name}" />
                 <h:message for="name" errorStyle="color: red" />
 
@@ -44,13 +44,13 @@
                     id="email"
                     size="52"
                     required="true"
-                    requiredMessage="Error: Email cannot be empty."                            
+                    requiredMessage="Erro: O Email não pode estar vazio."                            
                     value="#{administratorManager.newStudent.email}" >
                     <f:validateRegex pattern="[\w\.-]*[a-zA-Z0-9_]@[\w\.-]*[a-zA-Z0-9]\.[a-zA-Z][a-zA-Z\.]*[a-zA-Z]" />
                 </h:inputText>    
                 <h:message for="email" errorStyle="color: red" />
 
-                <h:outputLabel for="course" value="Course: " />
+                <h:outputLabel for="course" value="Curso: " />
                 <h:selectOneMenu
                     id="course"
                     value="#{administratorManager.newStudent.courseCode}" >
@@ -67,7 +67,7 @@
 
                 <h:commandButton
                     id="submit"
-                    value="Create"
+                    value="Criar"
                     binding="#{administratorManager.component}" 
                     action="#{administratorManager.createStudent}" />
                 <h:message for="submit" style="color: red"/>
