--- a/MasterManager-war/web/admin/students_update.xhtml
+++ b/MasterManager-war/web/admin/students_update.xhtml
@@ -4,7 +4,7 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:f="http://java.sun.com/jsf/core">
     <h:head>
-        <title>Academic Management</title>
+        <title>Actualizar Estudante</title>
     </h:head>
     <h:body>
         <h:form>                  
@@ -25,12 +25,12 @@
                     value="#{administratorManager.currentStudent.password}"/>
                 <h:message for="password" errorStyle="color: red" />                        
 
-                <h:outputLabel for="name" value="Name: " />
+                <h:outputLabel for="name" value="Nome: " />
                 <h:inputText 
                     id="name"
                     size="52"
                     required="true"
-                    requiredMessage="Error: Name cannot be empty."                            
+                    requiredMessage="Erro: O nome não pode estar vazio."                            
                     value="#{administratorManager.currentStudent.name}" />
                 <h:message for="name" errorStyle="color: red" />
 
@@ -39,13 +39,13 @@
                     id="email"
                     size="52"
                     required="true"
-                    requiredMessage="Error: Email cannot be empty."                            
+                    requiredMessage="Erro: O Email não pode estar vazio."                            
                     value="#{administratorManager.currentStudent.email}" >
                     <f:validateRegex pattern="[\w\.-]*[a-zA-Z0-9_]@[\w\.-]*[a-zA-Z0-9]\.[a-zA-Z][a-zA-Z\.]*[a-zA-Z]" />
                 </h:inputText>    
                 <h:message for="email" errorStyle="color: red" />
 
-                <h:outputLabel for="course" value="Course: " />
+                <h:outputLabel for="course" value="Curso: " />
                 <h:selectOneMenu
                     id="course"
                     value="#{administratorManager.currentStudent.courseCode}" >
@@ -61,7 +61,7 @@
 
                 <h:commandButton
                     id="submit"
-                    value="Update"
+                    value="Actualizar"
                     action="#{administratorManager.updateStudent}" />
                 <h:message for="submit" style="color: red"/>
             </h:panelGrid>  
