--- a/MasterManager-war/web/admin/teacher_update.xhtml
+++ b/MasterManager-war/web/admin/teacher_update.xhtml
@@ -4,7 +4,7 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:f="http://java.sun.com/jsf/core">
     <h:head>
-        <title>Academic Management</title>
+        <title>Actualizar Professor</title>
     </h:head>
     <h:body>
         <h:form>                  
@@ -21,16 +21,16 @@
                     id="password"
                     size="20"
                     required="true"
-                    requiredMessage="Error: Password cannot be empty."
+                    requiredMessage="Erro: A Password não pode estar vazia."
                     value="#{administratorManager.currentTeacher.password}"/>
                 <h:message for="password" errorStyle="color: red" />                        
 
-                <h:outputLabel for="name" value="Name: " />
+                <h:outputLabel for="name" value="Nome: " />
                 <h:inputText 
                     id="name"
                     size="52"
                     required="true"
-                    requiredMessage="Error: Name cannot be empty."                            
+                    requiredMessage="Erro: O Nome não pode estar vazio."                            
                     value="#{administratorManager.currentTeacher.name}" />
                 <h:message for="name" errorStyle="color: red" />
 
@@ -39,7 +39,7 @@
                     id="email"
                     size="52"
                     required="true"
-                    requiredMessage="Error: Email cannot be empty."                            
+                    requiredMessage="Erro: O Email não pode estar vazio."                            
                     value="#{administratorManager.currentTeacher.email}" >
                     <f:validateRegex pattern="[\w\.-]*[a-zA-Z0-9_]@[\w\.-]*[a-zA-Z0-9]\.[a-zA-Z][a-zA-Z\.]*[a-zA-Z]" />
                 </h:inputText>    
@@ -52,7 +52,7 @@
 
                 <h:commandButton
                     id="submit"
-                    value="Update"
+                    value="Actualizar"
                     action="#{administratorManager.updateTeacher}" />
                 <h:message for="submit" style="color: red"/>
             </h:panelGrid>  
