--- a/MasterManager-war/web/proponent/project_proposals_details.xhtml
+++ b/MasterManager-war/web/proponent/project_proposals_details.xhtml
@@ -9,49 +9,49 @@
     <h:body>
 
         <ui:composition template="../templates/skeleton.xhtml">
-            <ui:define name="title">CCP</ui:define>
+            <ui:define name="title">Detalhes da Proposta de Projecto</ui:define>
             <ui:define name="main">
 
 
                 <h:panelGrid columns="2">
 
-                    <h:outputLabel for="code" value="Code: " />
+                    <h:outputLabel for="code" value="Código: " />
                     <h:outputText 
                         id="code"
                         value="#{proponentManager.currentProjectProposal.code}"/>
 
-                    <h:outputLabel for="projectType" value="ProjectType: " />
+                    <h:outputLabel for="projectType" value="Tipo de Projecto: " />
                     <h:outputText 
                         id="projectType"
                         value="#{proponentManager.currentProjectProposal.projectTypeString}"/>
 
-                    <h:outputLabel for="title" value="Title: " />
+                    <h:outputLabel for="title" value="Título: " />
                     <h:outputText 
                         id="title"
                         value="#{proponentManager.currentProjectProposal.title}"/>
 
-                    <h:outputLabel for="projectAbstract" value="ProjectAbstract: " />
+                    <h:outputLabel for="projectAbstract" value="Abstract: " />
                     <h:outputText 
                         id="projectAbstract"
                         value="#{proponentManager.currentProjectProposal.projectAbstract}"/>
 
-                    <h:outputLabel for="workPlan" value="WorkPlan: " />
+                    <h:outputLabel for="workPlan" value="Plano de Trabalho: " />
                     <h:outputText 
                         id="workPlan"
                         value="#{proponentManager.currentProjectProposal.workPlan}"/>
 
-                    <h:outputLabel for="workPlace" value="WorkPlace: " />
+                    <h:outputLabel for="workPlace" value="Local de Trabalho: " />
                     <h:outputText 
                         id="workPlace"
                         value="#{proponentManager.currentProjectProposal.workPlace}"/>
 
 
-                    <h:outputLabel for="budget" value="Budget: " />
+                    <h:outputLabel for="budget" value="Orçamento: " />
                     <h:outputText 
                         id="budget"
                         value="#{proponentManager.currentProjectProposal.budget}"/>
 
-                    <h:outputLabel for="proponent" value="ProponentUsername " />
+                    <h:outputLabel for="proponent" value="Username do Proponente: " />
                     <h:outputText 
                         id="proponent"
                         value="#{proponentManager.currentProjectProposal.proponentUsername}"/>
