--- a/MasterManager-war/web/student/student_search_application.xhtml
+++ b/MasterManager-war/web/student/student_search_application.xhtml
@@ -7,27 +7,27 @@
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:em="http://xmlns.jcp.org/jsf/composite/emcomp">
     <ui:composition template="../templates/skeleton.xhtml">
-        <ui:define name="title">CCP</ui:define>
+        <ui:define name="title">Procurar Candidatura</ui:define>
         <ui:define name="main">
             <em:dt 
                 title="Candidaturas encontradas" 
               headers="#{['Id da candidatura', 'Código da proposta', 'Mensagem', 'Estado']}"
                 props="#{['id', 'projectProposalCode', 'applyingMessage', 'applicationState']}"
-                list="#{administratorManager.searchApplication}">
+                list="#{studentManager.searchApplication}">
                 <p:column headerText="Actions">
                     <h:form>
                         <h:commandLink value="Detalhes" action="student_application_details?facesredirect=true">
                             <f:setPropertyActionListener
-                                target="#{administratorManager.currentApplication}" value="#{object}" />
+                                target="#{studentManager.currentApplication}" value="#{object}" />
                         </h:commandLink>
                         &nbsp;
                         <h:commandLink value="Actualizar" action="student_application_update?facesredirect=true">
                             <f:setPropertyActionListener
-                                target="#{administratorManager.currentApplication}" value="#{object}" />
+                                target="#{studentManager.currentApplication}" value="#{object}" />
                         </h:commandLink>
                         &nbsp;
                         <h:commandLink value="Remover"
-                                       actionListener="#{administratorManager.removeApplication}">
+                                       actionListener="#{studentManager.removeApplication}">
                             <f:param name="applicationId" id="applicationId"
                                      value="#{object.id}" />
                         </h:commandLink>
