Minor login change.

--- a/MasterManager-war/web/login.xhtml
+++ b/MasterManager-war/web/login.xhtml
@@ -45,7 +45,7 @@
             <br/>
 
             <h:form>
-                <h:outputLabel for="search" value="Procurar proposta: " />
+                <h:outputLabel for="searchProjectProposals" value="Procurar proposta: " />
                 <h:inputText 
                     id="searchProjectProposals"
                     size="20"
